src/styles/index.scss
@import "reset";

@tailwind base;
@tailwind components;
@tailwind utilities;
@import "content";
@layer base {
  body {
    line-height: 1.5;
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    font-family: "Epilogue", "Monserrat", sans-serif;
    font-size: 16px;
    color: #232323;
  }
}
.container {
  width: 100%;
  max-width: 1260px;
  margin: 0 auto;
  padding: 0 20px;
}
a {
  text-decoration: none;
  color: inherit;
}
.text-primary {
  color: #a4d96c;
}
.grid-layout {
  display: grid;
  grid-auto-columns: 235px;
  gap: 20px;
  -ms-overflow-style: none;
  scrollbar-width: none;
  &::-webkit-scrollbar {
    display: none;
  }
  @media screen and (min-width: 1024px) {
    grid-template-columns: repeat(3, minmax(0, 1fr));
    gap: 40px;
  }
  @media screen and (max-width: 1023.98px) {
    grid-auto-flow: column;
    scroll-snap-type: x mandatory;
    overflow-x: auto;
  }

  & > * {
    scroll-snap-align: start;
  }
  &--primary {
    grid-auto-columns: 220px;
    @media screen and (min-width: 1024px) {
      grid-template-columns: repeat(4, minmax(0, 1fr));
    }
  }
}
.home-block {
  padding-bottom: 40px;
  @media screen and (min-width: 1024px) {
    padding-bottom: 60px;
  }
}

.hidden-input {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  white-space: nowrap;
}

.form-layout {
  @apply grid grid-cols-1 lg:gap-x-10 mb-5 lg:mb-10;
}

.form-layout-2 {
  @apply grid grid-cols-1 lg:grid-cols-2 lg:gap-x-10 mb-5 lg:mb-3;
}

.line-clamp-2 {
  display: -webkit-box;
  text-overflow: ellipsis;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow: hidden;
}

.line-clamp-5 {
  display: -webkit-box;
  text-overflow: ellipsis;
  -webkit-line-clamp: 5;
  -webkit-box-orient: vertical;
  overflow: hidden;
}

.quill {
  position: relative;
  .ql-toolbar {
    position: sticky;
    top: 0;
    background-color: white;
    z-index: 10;
  }
}

